--- a/livroJS/cap04/resp4_b.html
+++ b/livroJS/cap04/resp4_b.html
@@ -9,22 +9,24 @@
 </head>
 <body>
   <h1>Programa Verifica Velocidade</h1>
-  <div class="imagem">
-    <img src="img/processamento-dados.jpg" alt="processamento-dados">
-  </div>
-  <div class="formulario">
-    <form action="#">
-      <label for="inVelocidadePermitida">Velocidade Permitida: </label>
-      <input type="number" name="nVelocidadePermitida" id="inVelocidadePermitida" min="20" max="120" step="10" required>
-      <br><br>
-      <label for="inVelocidadeCondutor">Velocidade do Condutor: </label>
-      <input type="number" name="nVelocidadeCondutor" id="inVelocidadeCondutor" min="10" max="240" step="5" required>
-      <br><br>
-      <input type="submit" value="Verificar Velocidade">
-    </form>
-  </div>
-  <h3 id="outResp"></h3>
+  <main>
+    <div class="imagem">
+      <img src="img/processamento-dados.jpg" alt="processamento-dados">
+    </div>
+    <div class="formulario">
+      <form action="#">
+        <label for="inVelocidadePermitida">Velocidade Permitida: </label>
+        <input type="number" name="nVelocidadePermitida" id="inVelocidadePermitida" min="20" max="120" step="10" required>
+        <br><br>
+        <label for="inVelocidadeCondutor">Velocidade do Condutor: </label>
+        <input type="number" name="nVelocidadeCondutor" id="inVelocidadeCondutor" min="10" max="240" step="5" required>
+        <br><br>
+        <input type="submit" value="Verificar Velocidade">
+      </form>
+    </div>
+    <h3 id="outResp"></h3>
+  </main>
 
-  <script src="js/ex4_b.js"></script>
+  <script src="js/resp4_b.js"></script>
 </body>
 </html>
