--- a/livroJS/cap05/ex5_1.html
+++ b/livroJS/cap05/ex5_1.html
@@ -20,7 +20,7 @@
         <br><br>
         <input type="submit" value="Mostrar Tabuada">
       </form>
-      <h4 id="outTabuada"></h4>
+      <pre id="outTabuada"></pre>
     </div>
   </main>
   <script src="js/ex5_1.js"></script>
