--- a/livroJS/cap05/ex5_5.html
+++ b/livroJS/cap05/ex5_5.html
@@ -19,7 +19,7 @@
         <input type="text" name="nDescricaoConta" id="inDescricaoConta" required>
         <br><br>
         <label for="inValorPagar">Valor a Pagar: </label>
-        <input type="text" name="nValorPagar" id="inValorPagar" min="0" step="0.01" required>
+        <input type="number" name="nValorPagar" id="inValorPagar" min="0" step="0.01" required>
         <br><br>
         <input type="submit" value="Registrar Conta">
       </form>
