--- a/livroJS/cap06/resp6_a.html
+++ b/livroJS/cap06/resp6_a.html
@@ -19,8 +19,8 @@
         <input type="text" name="nClube" id="inClube" width="30" required>
         <input type="submit" value="Adicionar">
         <br><br>
-        <input type="button" value="Listar Clubes">
-        <input type="button" value="Mostrar Tabela de Jogos">
+        <input type="button" id="btnListarClubes" value="Listar Clubes">
+        <input type="button" id="btnMostrarTabela" value="Mostrar Tabela de Jogos">
       </form>
     </div>
     <pre id="outResp"></pre>
