--- a/livroJS/cap07/resp7_a.html
+++ b/livroJS/cap07/resp7_a.html
@@ -18,6 +18,7 @@
         <label for="inMensagem">Digite a mensagem a ser criptografada:</label>
         <br><br>
         <input type="text" name="nMensagem" id="inMensagem" size="50" required>
+        <input type="text" name="nCripto" id="inCripto" hidden>
         <input type="submit" value="Criptografar">
         <br><br>
         <pre id="outCripto"></pre>
