--- a/livroJS/cap08/resp8_c.html
+++ b/livroJS/cap08/resp8_c.html
@@ -15,13 +15,24 @@
     </div>
     <div class="formulario">
       <form action="#">
-        <label for="inValor">Valor da Vacina</label>
+        <label for="inValor">Valor da Vacina (R$): </label>
         <input type="number" name="nValor" id="inValor" min="1" step="0.01" required>
-        <label for="rbSim">Possui convênio</label>
-        <input type="radio" name="nConvenio" id="rbSim">Sim
+        <br><br>
+        <label for="rbSim">Possui convênio ?</label>
+        <input type="radio" name="nConvenio" id="rbSim" checked>Sim
         <input type="radio" name="nConvenio" id="rbNao">Não
+        <br><br>
+        <label for="inConvenio"  class="labelConvenio exibe">Convênio: </label>
+        <select name="nConvenio" id="inConvenio">
+          <option value="amigoAnimais">Amigo dos Animais</option>
+          <option value="saudeAnimal">Saúde Animal</option>
+        </select>
+        <br><br>
+        <input type="submit" value="Calcular Desconto">
       </form>
     </div>
+    <pre id="outResp"></pre>
   </main>
+  <script src="js/resp8_c.js"></script>
 </body>
 </html>
