--- a/livroJS/cap09/ex9_3.html
+++ b/livroJS/cap09/ex9_3.html
@@ -18,13 +18,19 @@
       <div class="col-sm-8">
         <h1>Qual o peso da melancia?</h1>
         <form action="#">
-          <p><label for="inNome">Nome do Apostador: </label>
-          <input type="text" name="nNome" id="inNome" class="form-control" required autofocus></p>
-          <p><label for="inPeso">Peso (em Gramas): </label>
-          <input type="number" name="nPeso" id="inPeso" min="0" step="1" class="form-control" required></p>
-          <p><input type="submit" value="Apostar" class="btn btn-primary">
-          <input type="button" value="Vencedor" id="btVencedor" class="btn btn-warning">
-          <input type="button" value="Limpar Apostas" id="btLimpar" class="btn btn-danger"></p>
+          <p>
+            <label for="inNome">Nome do Apostador: </label>
+            <input type="text" name="nNome" id="inNome" class="form-control" required autofocus>
+          </p>
+          <p>
+            <label for="inPeso">Peso (em Gramas): </label>
+            <input type="number" name="nPeso" id="inPeso" min="0" step="1" class="form-control" required>
+          </p>
+          <p>
+            <input type="submit" value="Apostar" class="btn btn-primary">
+            <input type="button" value="Vencedor" id="btVencedor" class="btn btn-warning">
+            <input type="button" value="Limpar Apostas" id="btLimpar" class="btn btn-danger">
+          </p>
         </form>
         <pre id="outResp"></pre>
       </div>
