--- a/livroJS/cap09/resp9_c.html
+++ b/livroJS/cap09/resp9_c.html
@@ -30,6 +30,7 @@
       </div>
       <pre id="outListaServicos" class="form-control"></pre>
       <pre id="outEmExecucao" class="form-control"></pre>
+      <pre id="outExecutados" class="form-control"></pre>
     </div>
   </main>
   <script src="js/resp9_c.js"></script>
