--- a/livroJS/cap10/ex10_2.html
+++ b/livroJS/cap10/ex10_2.html
@@ -22,6 +22,10 @@
             <label for="inSoma">A soma das moedas exibidas é:</label>
             <input type="number" name="nSoma" id="inSoma" min="0" step="0.05" class="form-control" required autofocus>
           </p>
+          <p>
+            <input type="submit" value="Conferir Resposta" class="btn btn-primary" id="btnConfere">
+            <input type="reset" value="Exibir novas moedas" class="btn btn-danger">
+          </p>
         </form>
       </div>
     </div>
