--- a/livroJS/cap10/resp10_1.html
+++ b/livroJS/cap10/resp10_1.html
@@ -15,7 +15,8 @@
       <div class="col-sm-4">
         <img src="img/descubra-numero.jpg" alt="descubra-numero">
       </div>
-      <div class="col-sm-8" id="mainDiv">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-6" id="mainDiv">
         <h1>Velas de Aniversário</h1>
         <form action="#">
           <p>
@@ -23,7 +24,7 @@
             <input type="number" name="nIdade" id="inIdade" min="0" max="120" step="1" required autofocus class="form-control">
           </p>
           <p>
-            <input type="submit" value="Exibir Velas" class="btn btn-primary">
+            <input type="submit" value="Exibir Velas" class="btn btn-primary" id="btnExibir">
             <input type="button" value="Novas Velas" class="btn btn-warning" id="btnNovasvelas">
           </p>
         </form>
