--- a/livroJS/cap11/ex11_1.html
+++ b/livroJS/cap11/ex11_1.html
@@ -41,7 +41,7 @@
             </div>
           </div>
         </form>
-        <pre class="mt-3"></pre>
+        <pre class="mt-3" id="outLista"></pre>
       </div>
     </div>
   </main>
