--- a/javascript-course/testes/001.pagAppPadrao.html
+++ b/javascript-course/testes/001.pagAppPadrao.html
@@ -10,24 +10,31 @@
 </head>
 <body>
   <header>
-    <nav>
-      <a href="#">Menu 1</a>
-      <a href="#">Menu 1</a>
-      <a href="#">Menu 1</a>
-      <a href="#">Menu 1</a>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">CSS</a></li>
+        <li><a href="#">JavaScript</a></li>
+        <li><a href="#">Python</a></li>
+        <li><a href="#">Sair</a></li>
+      </ul>
+      
     </nav>
   </header>
   <div class="container">
     <div class="menu-lateral">
       <ul>
-        <li><a href="#">Menu 1</a></li>
-        <li><a href="#">Menu 2</a></li>
-        <li><a href="#">Menu 3</a></li>
+        <li><a href="#">Pesquisar</a></li>
+        <li><a href="#">Códigos</a></li>
+        <li><a href="#">Voltar</a></li>
       </ul>
     </div>
     <div class="conteudo-principal">
       <!-- Formulários e conteúdo da aplicação SPA -->
-      <h1>Conteúdo Principal</h1>
+      <h1>Cadastro de Usuário</h1>
+      <h6>Módulo de Controle de Acesso</h6>
+      <br>
       <form>
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" class="form-control"><br><br>
@@ -38,7 +45,7 @@
     </div>
   </div>
   <footer>
-    <p>&copy; 2023 SPA Exemplo</p>
+    <p>&copy; 2025 SPA Modelo</p>
   </footer>
 </body>
 </html>
