--- a/javascript-course/testes/001.pagAppPadrao.html
+++ b/javascript-course/testes/001.pagAppPadrao.html
@@ -37,9 +37,9 @@
       <br>
       <form>
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" class="form-control"><br><br>
+        <input type="text" id="nome" name="nome" placeholder="digite o nome" class="form-control"><br><br>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" class="form-control"><br><br>
+        <input type="email" id="email" name="email" placeholder="digite o email" class="form-control"><br><br>
         <input type="submit" value="Enviar" class="btn btn-primary">
       </form>
     </div>
