--- a/javascript-course/testes/001.pagAppPadrao.html
+++ b/javascript-course/testes/001.pagAppPadrao.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <footer>
-    <p>&copy; 2025 SPA Modelo</p>
+    <p>&copy; 2025 Alexandre Cassilhas (Model)</p>
   </footer>
 </body>
 </html>
