--- a/livroJS/cap11/ex11.3.html
+++ b/livroJS/cap11/ex11.3.html
@@ -34,6 +34,8 @@
         </p>
       </form>
     </section>
+    <pre id="saida"></pre>
   </main>
+  <script src="js/ex11_3.js"></script>
 </body>
 </html>
