--- a/livroJS/cap11/ex11_3.html
+++ b/livroJS/cap11/ex11_3.html
@@ -15,7 +15,7 @@
   </header>
   <main class="container">
     <section class="menu">
-      <a href="ex11.3.html" class="btn btn-primary">Cadastrar Palavra</a>
+      <a href="ex11_3.html" class="btn btn-primary">Cadastrar Palavra</a>
       <a href="ex11_3lista.html" class="btn btn-success">Listar Palavras</a>
       <a href="ex11_3jogo.html" class="btn btn-danger">Iniciar Jogo</a>
     </section>
@@ -36,6 +36,6 @@
     </section>
     <pre id="saida"></pre>
   </main>
-  <script src="js/ex11_3.js"></script>
+  <script type="module" src="js/ex11_3.js"></script>
 </body>
 </html>
