--- a/livroJS/cap11/ex11_3lista.html
+++ b/livroJS/cap11/ex11_3lista.html
@@ -31,6 +31,6 @@
       </table>
     </section>
   </main>
-  <script src="js/ex11_3lista.js"></script>
+  <script type="module" src="js/ex11_3lista.js"></script>
 </body>
 </html>
