--- a/prj-Polifonia/venda.html
+++ b/prj-Polifonia/venda.html
@@ -107,25 +107,41 @@
               <div id="sales-history-list">
               </div>
             </section>
-            
-        </main>
+
+
+            <div class="summary-container">
+                <div class="summary-card">
+                    <span class="summary-label">Vendas Encontradas</span>
+                    <span id="summary-count" class="summary-value">0</span>
+                </div>
+                <div class="summary-card highlight">
+                    <span class="summary-label">Total no Período</span>
+                    <span id="summary-total" class="summary-value">R$ 0,00</span>
+                </div>
+            </div>
+
+            <button class="btn-export" onclick="exportToCSV()">💾 Exportar Histórico para Excel (CSV)</button>
+
+            <div id="sales-history-list">
+            </div>
+       </main>
     </div>
 
     <div id="receipt-modal" class="modal">
-    <div class="modal-content">
-        <div class="receipt-header">
-            <span class="dot"></span>
-            <strong>POLIFONIA</strong>
-        </div>
-        <div id="receipt-details">
+        <div class="modal-content">
+            <div class="receipt-header">
+                <span class="dot"></span>
+                <strong>POLIFONIA</strong>
             </div>
-        <div class="modal-actions">
-            <button class="btn-whatsapp" onclick="sendWhatsApp()">Enviar WhatsApp</button>
-            <button class="btn-print" onclick="window.print()">Imprimir</button>
-            <button class="btn-close" onclick="closeModal()">Novo Pedido</button>
+            <div id="receipt-details">
+            </div>
+            <div class="modal-actions">
+                <button class="btn-whatsapp" onclick="sendWhatsApp()">Enviar WhatsApp</button>
+                <button class="btn-print" onclick="window.print()">Imprimir</button>
+                <button class="btn-close" onclick="closeModal()">Novo Pedido</button>
+            </div>
         </div>
     </div>
-</div>
 
     <script src="js/script-venda.js"></script>
 </body>
