--- a/prj-Polifonia/venda.html
+++ b/prj-Polifonia/venda.html
@@ -143,6 +143,26 @@
         </div>
     </div>
 
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <h3>Editar Venda</h3>
+            <input type="hidden" id="edit-sale-id"> <div class="form-group" style="text-align: left;">
+                <label style="color: #333;">Nome do Comprador</label>
+                <input type="text" id="edit-buyer-name" style="color: rgb(242, 240, 240); border: 1px solid #ccc;">
+            </div>
+
+            <div class="form-group" style="text-align: left;">
+                <label style="color: #333;">Valor Total (R$)</label>
+                <input type="number" id="edit-total-value" step="0.01" style="color: rgb(242, 240, 240); border: 1px solid #ccc;">
+            </div>
+
+            <div class="modal-actions">
+                <button class="btn-finish" onclick="saveEdit()">Salvar Alterações</button>
+                <button class="btn-close" onclick="closeEditModal()">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/script-venda.js"></script>
 </body>
 </html>
