Criação do módulo de cadastro de usuários e de login
Criação do módulo de cadastro de usuários e de login.

--- a/prj-Polifonia/login.html
+++ b/prj-Polifonia/login.html
@@ -29,7 +29,7 @@
 
         <div class="captcha-box">
             <div id="captcha-img-container"></div>
-            <input type="text" id="captchaInput" placeholder="Digite o código" style="color: black;">
+            <input type="text" id="captchaInput" placeholder="Digite o código" style="color: rgb(115, 113, 113);">
         </div>
         <small style="color: #8b949e; display: block; margin-bottom: 15px;">Clique na imagem para trocar o código.</small>
 
