--- a/prj-Polifonia/venda.html
+++ b/prj-Polifonia/venda.html
@@ -41,10 +41,7 @@
             <div class="form-group">
                 <label for="product">Produto</label>
                 <select id="product" onchange="updatePrice()">
-                    <option value="0" data-name="">Selecione um item...</option>
-                    <option value="89.90" data-name="T-Shirt Basic">T-Shirt Basic - R$ 89,90</option>
-                    <option value="159.00" data-name="Calça Jeans Slim">Calça Jeans Slim - R$ 159,00</option>
-                    <option value="299.00" data-name="Casaco Polifonia">Casaco Polifonia - R$ 299,00</option>
+                    <option value="0" data-name="" data-custo="0">Selecione um item...</option>
                 </select>
             </div>
 
