--- a/prj-Polifonia/admin.html
+++ b/prj-Polifonia/admin.html
@@ -18,53 +18,54 @@
         </header>
 
         <main>
-            <div class="form-group">
-                <label>Nome Completo</label>
-                <input type="text" id="regNome" placeholder="Ex: João Silva">
-            </div>
-
-            <div class="form-grid">
+            <form id="formCadastro" onsubmit="salvarUsuario(event)">
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="email" id="regEmail" placeholder="joao@email.com">
+                    <label>Nome Completo</label>
+                    <input type="text" id="regNome" placeholder="Ex: João Silva" required>
+                </div>
+
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" id="regEmail" placeholder="joao@email.com" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Celular</label>
+                        <input type="text" id="regCelular" placeholder="(00) 00000-0000" 
+                        oninput="mascaraCelular(this)" maxlength="15" required>
+                    </div>
+                </div>
+
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label>CPF (Será seu Login)</label>
+                        <input type="text" id="regCPF" placeholder="000.000.000-00" 
+                            oninput="mascaraCPF(this)" maxlength="14" autocomplete="username" required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label>Senha Provisória</label>
+                        <input type="password" id="regSenha" placeholder="******" autocomplete="new-password" required>
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <label>Celular</label>
-                    <input type="text" id="regCelular" placeholder="(00) 00000-0000" 
-                    oninput="mascaraCelular(this)" maxlength="15">
+                    <label>Foto de Perfil (JPG, máx 300kb, 400x400)</label>
+                    <input type="file" id="regFoto" accept=".jpg, .jpeg" onchange="validarImagem(this)">
+                    <img id="preview" class="photo-preview">
                 </div>
-            </div>
 
-            <div class="form-grid">
                 <div class="form-group">
-                    <label>CPF (Será seu Login)</label>
-                    <input type="text" id="regCPF" placeholder="000.000.000-00" 
-                        oninput="mascaraCPF(this)" maxlength="14">
+                    <label>Perfil de Acesso</label>
+                    <select id="regPerfil">
+                        <option value="2">Vendedor</option>
+                        <option value="1">Administrador</option>
+                    </select>
                 </div>
-                
-                <div class="form-group">
-                    <label>Senha Provisória</label>
-                    <input type="password" id="regSenha" placeholder="******">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label>Foto de Perfil (JPG, máx 300kb, 400x400)</label>
-                <input type="file" id="regFoto" accept=".jpg, .jpeg" onchange="validarImagem(this)">
-                <img id="preview" class="photo-preview">
-            </div>
-
-            <div class="form-group">
-                <label>Perfil de Acesso</label>
-                <select id="regPerfil">
-                    <option value="2">Vendedor</option>
-                    <option value="1">Administrador</option>
-                </select>
-            </div>
-
-            <button class="btn-finish" onclick="salvarUsuario()">Cadastrar Usuário</button>
-            <button class="btn-secondary" onclick="window.location.href='venda.html'">Voltar ao PDV</button>
+                <button type="submit" class="btn-finish">Cadastrar Usuário</button>
+                <button class="btn-secondary" onclick="window.location.href='dashboard.html'">Voltar ao Dashboard</button>
+            </form>
         </main>
     </div>
 
