--- a/prj-Polifonia/estoque.html
+++ b/prj-Polifonia/estoque.html
@@ -35,6 +35,27 @@
 
         /* Área de Filtro ABC */
         .abc-controls { background: #161b22; padding: 15px; border-radius: 8px; display: flex; gap: 10px; align-items: end; margin-bottom: 20px; }
+
+        /* Estilo do Botão de Excluir (Vazado) */
+        .btn-delete {
+            background: transparent;
+            border: 1px solid #da3633; /* Vermelho alerta */
+            color: #da3633;
+            padding: 4px 8px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 1rem;
+            line-height: 1;
+            margin-left: 5px;
+        }
+
+        /* Efeito Hover: Preenche o fundo e muda a cor do ícone */
+        .btn-delete:hover {
+            background: #da3633;
+            color: #ffffff;
+            box-shadow: 0 0 8px rgba(218, 54, 51, 0.4);
+        }
     </style>
 </head>
 <body>
