--- a/prj-Polifonia/admin.html
+++ b/prj-Polifonia/admin.html
@@ -5,22 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polifonia - Gestão de Equipe</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .photo-preview { width: 80px; height: 80px; border-radius: 50%; border: 2px solid #8b1a1a; object-fit: cover; margin-top: 10px; display: none; }
-        .form-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-        .team-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
-        
-        /* Estilo do botão de exclusão que você escolheu */
-        .btn-delete-x {
-            background: transparent; border: 1px solid #da3633; color: #da3633;
-            padding: 4px 9px; border-radius: 4px; cursor: pointer;
-            transition: all 0.3s; font-size: 0.9rem; font-weight: bold; margin-left: 5px;
-        }
-        .btn-delete-x:hover { background: #da3633; color: white; }
-    </style>
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
-    <div class="container" style="max-width: 1000px;">
+    <div class="container">
         <header class="main-header">
             <div class="header-brand">
                 <div class="logo-circle"><span class="dot"></span><span class="brand-name">polifonia</span></div>
@@ -32,7 +20,7 @@
 
         <div class="team-header">
             <h2>Gestão de Equipe</h2>
-            <button class="btn-finish" style="width: auto;" onclick="openUserModal()">+ Novo Membro</button>
+            <button class="btn-finish" onclick="openUserModal()">+ Novo Membro</button>
         </div>
 
         <table>
@@ -51,9 +39,8 @@
     </div>
 
     <div id="user-modal" class="modal">
-        <div class="modal-content" style="background-color: #161b22; max-width: 600px;">
-            <h3 id="modalTitle" style="color: aliceblue;">Cadastrar Novo Usuário</h3>
-            
+        <div class="modal-content">
+            <h3 id="modalTitle">Cadastrar Novo Usuário</h3>
             <form id="formCadastro">
                 <input type="hidden" id="userId"> <div class="form-group">
                     <label>Nome Completo</label>
@@ -79,7 +66,7 @@
                     <div class="form-group">
                         <label id="labelSenha">Senha Provisória</label>
                         <input type="password" id="regSenha" placeholder="******">
-                        <small id="senhaHelp" style="color: #8b949e; display: none;">Deixe em branco para manter a atual.</small>
+                        <small id="senhaHelp">Deixe em branco para manter a atual.</small>
                     </div>
                 </div>
 
