--- a/prj-Polifonia/venda.html
+++ b/prj-Polifonia/venda.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polifonia - PDV</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/venda.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -176,15 +177,15 @@
 
     <div id="edit-modal" class="modal">
         <div class="modal-content">
-            <h3>Editar Venda</h3>
+            <h3 class="titulo-modal">Editar Venda</h3>
             <input type="hidden" id="edit-sale-id"> <div class="form-group" style="text-align: left;">
-                <label style="color: #333;">Nome do Comprador</label>
-                <input type="text" id="edit-buyer-name" style="color: rgb(242, 240, 240); border: 1px solid #ccc;">
+                <label>Nome do Comprador</label>
+                <input type="text" id="edit-buyer-name">
             </div>
 
             <div class="form-group" style="text-align: left;">
-                <label style="color: #333;">Valor Total (R$)</label>
-                <input type="number" id="edit-total-value" step="0.01" style="color: rgb(242, 240, 240); border: 1px solid #ccc;">
+                <label>Valor Total (R$)</label>
+                <input type="number" id="edit-total-value" step="0.01">
             </div>
 
             <div class="modal-actions">
