Organização do código e correções export .csv
Realizada a organização do códig, separando todo o css dos arquivos html e criando arquivos com o mesmo nome na pasta css dp projeto. Feita a manutenção da funcionalidade de export dos dados para um arquivo .csv, empregando os mesmos filtros do histórico de vendas do PDV.

--- a/prj-Polifonia/venda.html
+++ b/prj-Polifonia/venda.html
@@ -163,7 +163,7 @@
         <div class="modal-content">
             <div class="receipt-header">
                 <span class="dot"></span>
-                <strong>POLIFONIA</strong>
+                <strong id="polifonia">POLIFONIA</strong>
             </div>
             <div id="receipt-details">
             </div>
@@ -176,9 +176,10 @@
     </div>
 
     <div id="edit-modal" class="modal">
-        <div class="modal-content">
+        <div id="edit-venda" class="modal-content">
             <h3 class="titulo-modal">Editar Venda</h3>
-            <input type="hidden" id="edit-sale-id"> <div class="form-group" style="text-align: left;">
+            <input type="hidden" id="edit-sale-id"> 
+            <div class="form-group" style="text-align: left;">
                 <label>Nome do Comprador</label>
                 <input type="text" id="edit-buyer-name">
             </div>
