--- a/prj-Polifonia/dashboard.html
+++ b/prj-Polifonia/dashboard.html
@@ -4,72 +4,8 @@
     <meta charset="UTF-8">
     <title>Polifonia - Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        /* Estilos específicos do Dashboard */
-        .menu-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 40px;
-        }
-
-        .menu-card {
-            background: #161b22;
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            border: 1px solid #30363d;
-            cursor: pointer;
-            transition: 0.3s;
-            text-decoration: none;
-            color: white;
-        }
-
-        .menu-card:hover { transform: translateY(-5px); border-color: #8b1a1a; }
-        .menu-card h3 { color: #8b1a1a; margin-bottom: 10px; }
-
-        .kpi-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 20px;
-            margin-bottom: 40px;
-        }
-
-        .kpi-card {
-            background: linear-gradient(145deg, #161b22, #0d1117);
-            padding: 20px;
-            border-radius: 10px;
-            border-left: 5px solid #1f6feb;
-        }
-
-        .kpi-card.highlight { border-left-color: #8b1a1a; }
-        
-        .kpi-value { font-size: 1.8rem; font-weight: bold; display: block; margin-top: 5px; }
-        .kpi-label { font-size: 0.8rem; color: #8b949e; text-transform: uppercase; }
-
-        /* REORGANIZAÇÃO DOS GRÁFICOS: Agora em grid flexível para 3 itens */
-        .charts-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
-        /* Seção de Filtros */
-        .filter-section {
-            background: #161b22;
-            padding: 15px;
-            border-radius: 10px;
-            border: 1px solid #30363d;
-            margin-bottom: 25px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-        
-        @media (max-width: 768px) { .charts-container { grid-template-columns: 1fr; } }
-    </style>
 </head>
 <body>
     <div class="container" style="max-width: 1200px;"> <header class="main-header">
