Criação  do Módulo Financeiro
Criação do módulo financeiro, com cadastro de Tipos de Lançamentos e de Lançamentos de Entrada e Saída.

--- a/prj-Polifonia/dashboard.html
+++ b/prj-Polifonia/dashboard.html
@@ -28,7 +28,11 @@
                 <h3>👥 Usuários</h3>
                 <p>Gestão de Equipe</p>
             </a>
-             <a href="estoque.html" class="menu-card">
+            <a href="financeiro.html" class="menu-card">
+                <h3>💰 Livro Caixa</h3>
+                <p>Gestão Financeira</p>
+            </a>
+            <a href="estoque.html" class="menu-card">
                 <h3>📦 Estoque</h3>
                 <p>Gestão de Produtos</p>
             </a>
