--- a/prj-Polifonia/financeiro.html
+++ b/prj-Polifonia/financeiro.html
@@ -24,9 +24,42 @@
         </div>
 
         <div id="tab-caixa" class="tab-content active">
-            <div class="header-actions">
+          <!--  <div class="header-actions">
                 <h2>Movimentações</h2>
                 <button class="btn-finish"  style="width: auto;" onclick="openCaixaModal()">+ Novo Lançamento</button>
+            </div> -->
+            <div class="header-actions">
+
+                <h2>Movimentações</h2>
+                
+                <div class="actions-right">
+                    <button class="btn-secondary" onclick="window.print()" style="margin-right: 10px;">🖨️ Imprimir</button>
+                    <button class="btn-finish" style="width: auto;" onclick="openCaixaModal()">+ Novo Lançamento</button>
+                </div>
+            </div>
+
+            <div class="fin-summary-bar">
+                <div class="fin-filters">
+                    <input type="date" id="filtroInicio" class="input-dark">
+                    <span>até</span>
+                    <input type="date" id="filtroFim" class="input-dark">
+                    <button class="btn-edit" onclick="loadCaixa()" style="padding: 8px 15px;">Filtrar</button>
+                </div>
+                
+                <div class="fin-balance-summary">
+                    <div class="balance-item">
+                        <small>Entradas</small>
+                        <span id="resumoEntradas" style="color: #238636;">R$ 0,00</span>
+                    </div>
+                    <div class="balance-item">
+                        <small>Saídas</small>
+                        <span id="resumoSaidas" style="color: #da3633;">R$ 0,00</span>
+                    </div>
+                    <div class="balance-item total">
+                        <small>Saldo Período</small>
+                        <span id="resumoSaldo">R$ 0,00</span>
+                    </div>
+                </div>
             </div>
             <table>
                 <thead>
